unpackaged/main/default/objects/E2CP__Widespread_Issue__c/E2CP__Widespread_Issue__c.object-meta.xml
<CustomObject>
    <description>When the same issue affects multiple customers, Widespread Issues provides a mechanism to relate these cases together, suggest solutions, and streamline communication.</description>
    <label>Widespread Issue</label>
    <nameField>
        <displayFormat>WSI-{00000000}</displayFormat>
        <label>Widespread Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Widespread Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>