unpackaged/main/default/objects/E2CP__Widespread_Issue__c/fields/E2CP__Affected_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Affected_Case_Count__c</fullName>
    <description>The number of related Widespread Issue Reports</description>
    <label>Affected Case Count</label>
    <summaryForeignKey>E2CP__Widespread_Issue_Report__c.E2CP__Widespread_Issue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>