unpackaged/main/default/objects/E2CP__Widespread_Issue__c/fields/E2CP__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Closed_Date__c</fullName>
    <description>Date the widespread issue was resolved</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>