unpackaged/main/default/objects/E2CP__Widespread_Issue__c/listViews/E2CP__All.listView-meta.xml
<ListView>
    <fullName>E2CP__All</fullName>
    <columns>NAME</columns>
    <columns>E2CP__Title__c</columns>
    <columns>E2CP__Status__c</columns>
    <columns>E2CP__Previous_Widespread_Issue__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>